Tablet top-padding bug fixed.
Tested only on Chrome emulation.

Bug text:”top margin too high on "about hunger in america" header on
tablet landscsape”

--- a/themes/bootstrap/css/style.css
+++ b/themes/bootstrap/css/style.css
@@ -1210,6 +1210,9 @@ nav{
     width: 45%;
     font-size: 0.8em;
   }
+  .about-container {
+    padding-top: 5px;
+  }
 }
 @media (max-width: 768px){
 	.col-md-12.visible-xs.act {
